crates/pack/tests/compile_fail/fact_new_without_feature.stderr
error[E0599]: no function or associated item named `construct` found for struct `Fact` in the current scope
 --> tests/compile_fail/fact_new_without_feature.rs:8:23
  |
8 |     let _fact = Fact::construct(ContextKey::Seeds, "test-id", "test-content");
  |                       ^^^^^^^^^ function or associated item not found in `Fact`
